# ticketingtool

./: .dockerignore  Dockerfile  Dockerfile.prod  README.md  create_token.py  debug_token_verify.py  docker-compose.prod.yml  docker-compose.yml  print_store.py  pyproject.toml  serve.py  settings.db
app/: __init__.py  main.py
app/api/: __init__.py
app/api/routes/: __init__.py  admin.py  health.py  items.py
app/core/: __init__.py  config.py  logging.py  security.py  store.py  token.py
scripts/: debug_admin.py  debug_imm.py
tests/: test_admin_settings.py
